fix spacing howitworks and whoisthisfor section

--- a/query.css
+++ b/query.css
@@ -67,7 +67,7 @@ order: 2;
 
 .howitworks-grid {
      gap: 1.5rem;
-   justify-self: center
+   justify-content: center;
 }
 
 .howitworks-card {
@@ -103,7 +103,7 @@ order: 2;
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
     width: 57rem;
-    justify-self: center;
+    margin: 0 auto;
 
 }
 
